--- a/app/src/main/res/layout/item_comment_pic.xml
+++ b/app/src/main/res/layout/item_comment_pic.xml
@@ -13,11 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <ImageView
-            tools:src="@drawable/audiance"
+        <com.dayzeeco.dayzee.androidView.view.PolygonImageView
+            app:poly_vertices="0"
+            app:poly_corner_radius="15"
+            android:id="@+id/comment_user_pic_imageview"
             android:layout_margin="8dp"
             android:layout_width="36dp"
-            android:id="@+id/comment_user_pic_imageview"
             android:layout_height="36dp"/>
 
         <ImageView
