--- a/app/src/main/res/layout/item_user_send.xml
+++ b/app/src/main/res/layout/item_user_send.xml
@@ -19,13 +19,17 @@
         android:layout_width="38dp"
         android:layout_height="38dp">
 
-        <ImageView
-            android:layout_centerInParent="true"
-            android:id="@+id/user_imageview"
-            android:background="@drawable/border_pic_profile"
+
+        <com.dayzeeco.dayzee.androidView.view.PolygonImageView
+            app:poly_vertices="0"
             android:padding="0.8dp"
+            android:background="@drawable/border_pic_profile"
+            android:layout_centerInParent="true"
+            app:poly_corner_radius="15"
+            android:id="@+id/user_imageview"
             android:layout_width="36dp"
             android:layout_height="36dp"/>
+
 
     </RelativeLayout>
 
