--- a/app/src/main/res/layout-sw480dp/item_user.xml
+++ b/app/src/main/res/layout-sw480dp/item_user.xml
@@ -9,7 +9,7 @@
 
     <com.dayzeeco.dayzee.androidView.view.PolygonImageView
         app:poly_vertices="0"
-        app:poly_corner_radius="15"
+        app:poly_corner_radius="@dimen/penta_small_corner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
