--- a/app/src/main/res/layout/fragment_profil_modify.xml
+++ b/app/src/main/res/layout/fragment_profil_modify.xml
@@ -58,7 +58,7 @@
 
                 <com.dayzeeco.dayzee.androidView.view.PolygonImageView
                     app:poly_vertices="0"
-                    app:poly_corner_radius="15"
+                    app:poly_corner_radius="@dimen/penta_big_corner"
                     android:id="@+id/profile_modify_pic_imageview"
                     android:layout_marginTop="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
