--- a/app/src/main/res/layout/item_timenote_recent.xml
+++ b/app/src/main/res/layout/item_timenote_recent.xml
@@ -59,7 +59,7 @@
 
         <com.dayzeeco.dayzee.androidView.view.PolygonImageView
             app:poly_vertices="0"
-            app:poly_corner_radius="15"
+            app:poly_corner_radius="@dimen/penta_small_corner"
             android:id="@+id/timenote_recent_pic_user_imageview"
             android:background="@drawable/border_pic_profile_recent"
             app:layout_constraintTop_toTopOf="@id/timenote_recent_title"
