--- a/app/src/main/res/layout/item_pref_sub_category_chip.xml
+++ b/app/src/main/res/layout/item_pref_sub_category_chip.xml
@@ -3,13 +3,15 @@
     android:id="@+id/chip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:text="SPORT"
+    tools:text="Fri, 8 March 2022"
     android:layout_margin="4dp"
-    app:mcv_backgroundColor="@color/colorStartGradient"
-    app:mcv_closeColor="@android:color/white"
-    app:mcv_textColor="@android:color/white"
-    app:mcv_selectedBackgroundColor="@color/colorStartGradient"
+    app:mcv_backgroundColor="@color/colorText"
+    app:mcv_closeColor="@android:color/darker_gray"
+    app:mcv_textColor="@color/colorBackground"
+    app:mcv_selectedTextColor="@color/colorBackground"
+    app:mcv_selectedBackgroundColor="@color/colorText"
     app:mcv_closable="true"
+    app:mcv_cornerRadius="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
