--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -102,7 +102,6 @@
                     android:layout_height="wrap_content"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_marginHorizontal="16dp"
                     android:visibility="gone"
                     android:id="@+id/pic_cl"
                     android:layout_marginBottom="12dp"
@@ -356,7 +355,31 @@
                         android:textColor="@android:color/darker_gray"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintStart_toStartOf="@id/when_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="gone"
+                        android:paddingBottom="16dp"
+                        android:id="@+id/profile_recurence_rv"
+                        app:layout_constraintTop_toBottomOf="@id/when_label"
+                        app:layout_constraintStart_toStartOf="@id/when_label"
                         android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:visibility="gone"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/profile_configure_recurrence"
+                        android:text="@string/configure_reccurence"
+                        android:textSize="14sp"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="16dp"
+                        android:textColor="@android:color/darker_gray"
+                        app:layout_constraintTop_toBottomOf="@id/profile_add_end_date"
+                        app:layout_constraintStart_toStartOf="@id/when_label"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
                     <TextView
@@ -421,6 +444,8 @@
                         app:layout_constraintTop_toTopOf="@id/when_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
+
 
                     <ImageView
                         android:visibility="gone"
