--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -189,7 +189,7 @@
                 android:drawableStart="@drawable/ic_new_timenote_share_with"
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
-                android:text="@string/from"
+                android:text="@string/who"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
@@ -335,7 +335,7 @@
                 android:textColor="@color/colorText"
                 android:textSize="14sp"
                 android:drawableStart="@drawable/ic_new_timenote_when"
-                android:text="@string/when"
+                android:text="@string/since"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
