--- a/app/src/main/res/layout-sw480dp/fragment_create_timenote.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_create_timenote.xml
@@ -83,7 +83,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/create_timenote_take_add_pic"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:textAllCaps="true"
                     android:drawablePadding="8dp"
                     android:fontFamily="sans-serif-light"
@@ -104,28 +104,61 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
                     android:id="@+id/pic_cl"
-                    android:layout_marginBottom="12dp"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_height="150dp">
 
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/vp_pic"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
+                    <androidx.cardview.widget.CardView
+                        app:cardCornerRadius="5dp"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:scaleType="centerCrop"
-                        android:layout_width="match_parent"
-                        android:layout_height="250dp"/>
-
-                    <me.relex.circleindicator.CircleIndicator3
-                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"
+                            app:layout_constrainedHeight="true"
+                            android:id="@+id/timenote_pic"
+                            app:layout_constraintHeight_min="200dp"
+                            app:layout_constraintHeight_max="700dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+                    </androidx.cardview.widget.CardView>
+
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/create_timenote_image_logo"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_baseline_filter_24"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:id="@+id/indicator"
-                        android:layout_width="0dp"
-                        android:layout_height="48dp"/>
+                        app:elevation="2dp"
+                        android:clickable="false"
+                        app:borderWidth="0dp"
+                        android:background="@android:color/transparent"
+                        android:backgroundTint="@android:color/transparent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/create_timenote_video_logo"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_baseline_slideshow_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:elevation="2dp"
+                        android:clickable="false"
+                        app:borderWidth="0dp"
+                        android:background="@android:color/transparent"
+                        android:backgroundTint="@android:color/transparent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -149,7 +182,7 @@
                 android:fontFamily="sans-serif-light"
                 android:text="@string/choose_a_color"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/create_timenote_linearLayoutMain"
@@ -254,9 +287,9 @@
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_profile_name"
                         android:drawablePadding="8dp"
-                        android:text="@string/title"
+                        android:text="@string/title_create_event"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -301,7 +334,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/add_a_description"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -336,8 +369,8 @@
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_new_timenote_when"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
-                        android:text="@string/when"
+                        android:textSize="14sp"
+                        android:text="@string/when_create_event"
                         android:paddingBottom="16dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -349,13 +382,37 @@
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/profile_add_end_date"
                         android:text="@string/add_end_date"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:paddingTop="8dp"
                         android:paddingBottom="16dp"
                         android:textColor="@android:color/darker_gray"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintStart_toStartOf="@id/when_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="gone"
+                        android:paddingBottom="16dp"
+                        android:id="@+id/profile_recurence_rv"
+                        app:layout_constraintTop_toBottomOf="@id/when_label"
+                        app:layout_constraintStart_toStartOf="@id/when_label"
                         android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:visibility="gone"
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/profile_configure_recurrence"
+                        android:text="@string/configure_reccurence"
+                        android:textSize="14sp"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="16dp"
+                        android:textColor="@android:color/darker_gray"
+                        app:layout_constraintTop_toBottomOf="@id/profile_add_end_date"
+                        app:layout_constraintStart_toStartOf="@id/when_label"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
                     <TextView
@@ -363,7 +420,7 @@
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/from_label"
                         android:text="@string/from"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/colorText"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintEnd_toEndOf="@id/when_label"
@@ -376,7 +433,7 @@
                         android:id="@+id/to_label"
                         android:layout_marginTop="8dp"
                         android:text="@string/to"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:paddingBottom="16dp"
                         android:textColor="@color/colorText"
                         app:layout_constraintTop_toBottomOf="@id/from_label"
@@ -390,7 +447,7 @@
                         android:id="@+id/create_timenote_from"
                         tools:text="14 Janvier 2020"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="@id/from_label"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
@@ -403,7 +460,7 @@
                         android:layout_marginTop="8dp"
                         tools:text="15 Janvier 2020"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toBottomOf="@id/create_timenote_from"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
@@ -413,13 +470,15 @@
                         android:fontFamily="sans-serif-light"
                         android:visibility="gone"
                         android:id="@+id/create_timenote_fixed_date"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="@color/colorText"
                         tools:text="27, jun 2020"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/when_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
+
+
 
                     <ImageView
                         android:visibility="gone"
@@ -460,7 +519,7 @@
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_profile_from"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="@string/where"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -495,7 +554,7 @@
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_new_timenote_share_with"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="@string/visibility"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -507,7 +566,7 @@
                         android:id="@+id/create_timenote_share_with"
                         android:drawablePadding="8dp"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
@@ -540,7 +599,7 @@
                         android:drawablePadding="8dp"
                         android:textColor="@android:color/darker_gray"
                         android:drawableStart="@drawable/ic_categorie_ok"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="@string/category"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -553,7 +612,7 @@
                         android:id="@+id/create_timenote_category"
                         android:drawablePadding="8dp"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
@@ -585,7 +644,7 @@
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_sub_category_label"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="@string/subcategory"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -597,7 +656,7 @@
                         android:id="@+id/create_timenote_sub_category"
                         android:drawablePadding="8dp"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
@@ -631,7 +690,7 @@
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_monetisation_ok"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="@string/paid_timenote"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -643,7 +702,7 @@
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_paid_timenote_status_no_answer"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -682,7 +741,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/add_an_url"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -719,7 +778,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/add_a_label_to_appear"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -757,7 +816,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/organizers"
                         android:textColor="@color/colorText"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -771,7 +830,7 @@
                 android:textAllCaps="true"
                 android:layout_marginBottom="12dp"
                 android:text="@string/clear_all_fields"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textColor="@android:color/darker_gray"
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
