--- a/app/src/main/res/layout-sw480dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_detailed_fragment.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.homeFlow.DetailedTimenote">
 
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/abl"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:id="@+id/detailed_timenote_ll"
             style="@style/AppTheme.Toolbar.LinearLayout"
@@ -23,15 +29,15 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:fontFamily="sans-serif-light"
-                        android:drawableStart="@drawable/ic_back_thin"
                         android:id="@+id/detailed_timenote_btn_back"
-                        android:text="" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_back_thin"
+                        android:fontFamily="sans-serif-light"
+                        android:text=""
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="0dp"
@@ -44,11 +50,11 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
-                            android:background="@drawable/border_pic_profile"
-                            android:padding="0.6dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            android:background="@drawable/border_pic_profile"
+                            android:padding="0.6dp"
                             android:id="@+id/detailed_timenote_pic_user"
                             android:layout_width="36dp"
                             android:layout_height="36dp" />
@@ -68,14 +74,14 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0"
                             android:textColor="@color/colorText"
-                            android:textSize="16sp" />
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/detailed_timenote_address"
                             android:maxLines="1"
                             app:layout_constraintHorizontal_bias="0"
                             android:fontFamily="sans-serif-light"
-                            android:textSize="14sp"
+                            android:textSize="12sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             android:ellipsize="end"
                             app:layout_constrainedWidth="true"
@@ -92,64 +98,53 @@
 
                     <ImageView
                         android:id="@+id/detailed_timenote_btn_more"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:src="@drawable/ic_more_vert_black_profile_24dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.appcompat.widget.Toolbar>
 
-            <TextView style="@style/AppTheme.Divider.Toolbar"/>
+            <TextView style="@style/AppTheme.Divider.Toolbar" />
 
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
-        android:id="@+id/detailed_timenote_scc"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+    <include
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/timenote_root"
+        layout="@layout/item_timenote_root"
+        app:layout_constraintTop_toBottomOf="@id/abl" />
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/detailed_timenote_sv"
+        android:paddingTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="68dp"
+        android:fillViewport="true"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_constraintTop_toBottomOf="@id/timenote_root">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.recyclerview.widget.RecyclerView
+            tools:listitem="@layout/item_comment_pic"
+            android:id="@+id/detailed_timenote_comments_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-          <include
-              app:layout_constraintTop_toTopOf="parent"
-              android:id="@+id/timenote_root"
-              layout="@layout/item_timenote_root"/>
-
-            <androidx.core.widget.NestedScrollView
-                android:layout_marginBottom="68dp"
-                android:id="@+id/detailed_timenote_sv"
-                android:visibility="visible"
-                android:fillViewport="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/timenote_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/detailed_timenote_comments_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
 
-            </androidx.core.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
@@ -157,20 +152,22 @@
         tools:listitem="@layout/item_user"
         android:id="@+id/detailed_timenote_rv"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
+        app:layout_constraintBottom_toTopOf="@+id/detailed_timenote_sv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll"
+        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_sv"
         android:background="@color/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        app:layout_anchor="@id/detailed_timenote_scc"
         app:layout_anchorGravity="bottom">
 
 
@@ -193,8 +190,8 @@
             app:layout_constraintBottom_toBottomOf="@id/fragment_detailed_comment_ll"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/fragment_detailed_comment_ll"
-            android:layout_width="60dp"
-            android:layout_height="60dp"/>
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
 
         <ProgressBar
             android:visibility="gone"
@@ -203,8 +200,8 @@
             app:layout_constraintBottom_toBottomOf="@id/fragment_detailed_comment_ll"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/fragment_detailed_comment_ll"
-            android:layout_width="36dp"
-            android:layout_height="36dp"/>
+            android:layout_width="24dp"
+            android:layout_height="24dp"/>
 
         <LinearLayout
             android:id="@+id/fragment_detailed_comment_ll"
@@ -233,7 +230,7 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/add_a_comment"
                 android:maxLines="2"
-                android:textSize="15sp" />
+                android:textSize="13sp" />
 
             <ImageView
                 android:id="@+id/timenote_detailed_send_comment"
@@ -245,4 +242,6 @@
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
