--- a/app/src/main/res/layout-sw480dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw480dp/item_timenote_root.xml
@@ -7,30 +7,72 @@
     android:layout_height="wrap_content"
     android:background="@color/colorBackground">
 
-
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/timenote_vp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <FrameLayout
+        android:visibility="gone"
+        android:id="@+id/detailed_media_container"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:adjustViewBounds="true"
+            android:id="@+id/detailed_thumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:scaleType="fitCenter" />
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_baseline_volume_up_24"
+            android:layout_gravity="end|bottom"
+            android:id="@+id/volume_control"
+            android:alpha="0"
+            android:animateLayoutChanges="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"/>
+
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/video_progressBar"
+            style="?android:attr/progressBarStyle"
+            android:visibility="gone"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/timenote_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0"
         android:background="@drawable/gradient_timenote_top"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        tools:text="BEACH PARTY"
+        android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:ellipsize="end"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/timenote_vp" />
 
@@ -44,50 +86,48 @@
         app:layout_constraintStart_toStartOf="@id/timenote_vp"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
 
+
     <TextView
-        tools:text="2022"
         android:id="@+id/timenote_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
         android:gravity="center"
+        android:layout_marginEnd="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
+        tools:text="2020"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_1"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/separator_1" />
 
     <TextView
         android:id="@+id/separator_1"
         android:layout_width="2dp"
         android:layout_height="48dp"
+        android:layout_marginStart="140dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
-        app:layout_constraintStart_toEndOf="@id/timenote_year" />
+        app:layout_constraintStart_toStartOf="@id/timenote_vp" />
 
     <TextView
-        tools:text="19 févr. \n 19:00"
         android:id="@+id/timenote_day_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
+        tools:text="19 févr. \n 19:00"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_1"
@@ -97,98 +137,99 @@
         android:id="@+id/separator_2"
         android:layout_width="2dp"
         android:layout_height="48dp"
+        android:layout_marginEnd="140dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintEnd_toStartOf="@id/timenote_time"
-        app:layout_constraintStart_toEndOf="@id/timenote_day_month" />
+        app:layout_constraintEnd_toEndOf="@id/timenote_vp" />
 
     <TextView
-        tools:text="19 févr. \n 19:00"
         android:id="@+id/timenote_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
         android:gravity="center"
+        android:layout_marginStart="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
+        tools:text="19 févr. \n 19:00"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator_2"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
 
     <TextView
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
         android:id="@+id/timenote_in_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_oval"
-        android:drawablePadding="4dp"
-        android:fontFamily="sans-serif-light"
+        android:textSize="16sp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
+        android:gravity="center"
         android:shadowRadius="1.5"
+        android:drawablePadding="4dp"
+        android:drawableStart="@drawable/ic_oval"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        tools:text="LIVE"
         app:layout_constraintEnd_toEndOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="@id/timenote_vp"
-        app:layout_constraintTop_toTopOf="@id/separator_2" />
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        app:layout_constraintTop_toTopOf="@id/separator_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/timenote_buy_cl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBackground"
         android:visibility="gone"
+        android:id="@+id/timenote_buy_cl"
+        android:background="@color/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp">
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/timenote_buy"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
             android:gravity="end"
+            android:id="@+id/timenote_buy"
+            android:visibility="visible"
+            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
             android:textColor="@color/colorAccent"
-            android:textSize="20sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/more_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="Find out more"
+            android:textSize="14sp"
             android:textColor="@color/colorAccent"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"
-            android:layout_marginHorizontal="16dp"
+            app:layout_constraintTop_toBottomOf="@id/more_label"
             android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="16dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/more_label" />
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <ImageView
         android:id="@+id/timenote_comment"
@@ -236,71 +277,71 @@
         android:id="@+id/timenote_fl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        android:layout_marginStart="12dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
         app:layout_constraintTop_toBottomOf="@id/timenote_comment">
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_one_rl"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
             android:layout_marginEnd="-8dp"
-            android:background="@drawable/border_iv">
+            android:background="@drawable/border_iv"
+            android:layout_gravity="center"
+            android:layout_width="28dp"
+            android:layout_height="28dp">
 
             <ImageView
+                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_one"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerInParent="true" />
+                android:layout_height="24dp" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_two_rl"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:layout_gravity="center"
             android:layout_marginEnd="-8dp"
-            android:background="@drawable/border_iv">
+            android:background="@drawable/border_iv"
+            android:layout_gravity="center"
+            android:layout_width="28dp"
+            android:layout_height="28dp">
 
             <ImageView
+                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_two"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerInParent="true" />
+                android:layout_height="24dp" />
 
         </RelativeLayout>
 
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_three_rl"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:background="@drawable/border_iv"
             android:layout_gravity="center"
-            android:background="@drawable/border_iv">
+            android:layout_width="28dp"
+            android:layout_height="28dp">
 
             <ImageView
+                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_three"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerInParent="true" />
+                android:layout_height="24dp" />
 
         </RelativeLayout>
 
 
         <TextView
+            android:layout_marginStart="4dp"
+            android:layout_gravity="center"
             android:id="@+id/timenote_added_by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="4dp"
+            tools:text="Joined by Jordan Dahan and Thousands of "
             android:textColor="@color/colorText"
-            android:textSize="15sp"
-            tools:text="Joined by Jordan Dahan and Thousands of " />
+            android:textSize="13sp" />
 
     </LinearLayout>
 
@@ -313,23 +354,23 @@
         android:ellipsize="end"
         android:maxLines="3"
         android:textColor="@color/colorText"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@id/timenote_comment"
+        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
         app:layout_constraintTop_toBottomOf="@id/timenote_fl"
         tools:targetApi="m"
-        tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party" />
+        tools:text="#Beach חיים סגולות התזונה היפנית לאריכות ואיכות חיים" />
 
     <TextView
+        tools:text="See the 877 comments"
         android:id="@+id/timenote_comment_account"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="See the 12 comments"
         android:textColor="@android:color/darker_gray"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        android:textSize="13sp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc"
         app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc" />
+        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
