--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -104,14 +104,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
                     android:id="@+id/pic_cl"
-                    android:layout_marginBottom="12dp"
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
                     android:layout_marginHorizontal="24dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="150dp">
 
                     <androidx.cardview.widget.CardView
-                        app:cardCornerRadius="10dp"
+                        app:cardCornerRadius="5dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="match_parent"
@@ -121,14 +120,45 @@
                             android:scaleType="centerCrop"
                             android:adjustViewBounds="true"
                             app:layout_constrainedHeight="true"
-                            android:background="@color/colorBackground"
                             android:id="@+id/timenote_pic"
-                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHeight_min="200dp"
                             app:layout_constraintHeight_max="700dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"/>
                     </androidx.cardview.widget.CardView>
+
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/create_timenote_image_logo"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_baseline_filter_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:elevation="2dp"
+                        android:clickable="false"
+                        app:borderWidth="0dp"
+                        android:background="@android:color/transparent"
+                        android:backgroundTint="@android:color/transparent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/create_timenote_video_logo"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_baseline_slideshow_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:elevation="2dp"
+                        android:clickable="false"
+                        app:borderWidth="0dp"
+                        android:background="@android:color/transparent"
+                        android:backgroundTint="@android:color/transparent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
