--- a/app/src/main/res/layout-sw480dp/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout-sw480dp/item_profile_timenote_list_style.xml
@@ -87,7 +87,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <ImageView
+        <com.dayzeeco.dayzee.androidView.view.PolygonImageView
+            app:poly_vertices="0"
+            app:poly_corner_radius="5"
             android:id="@+id/profile_item_pic_profile_imageview"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@id/item_card"
